# WS_Conan_1_CHS

./: .gitignore  README.md  build.bat  main.asm  main.sym  main_chs.tbl  main_chs_old.tbl  main_jpn.tbl  marubatsu_jpn.tbl  pyproject.toml
graphic/: chapter_title.asm  font.asm  marubatsu_font.asm  misc.asm  rotating.asm  stats.asm  titles.asm
marubatsu_tbl/: marubatsu_chs_00.tbl  marubatsu_chs_01.tbl  marubatsu_chs_02.tbl  marubatsu_chs_03.tbl  marubatsu_chs_04.tbl  marubatsu_chs_05.tbl  marubatsu_chs_06.tbl  marubatsu_chs_07.tbl  marubatsu_chs_08.tbl  marubatsu_chs_09.tbl  marubatsu_chs_0A.tbl  marubatsu_chs_0B.tbl  marubatsu_chs_0C.tbl  marubatsu_chs_0D.tbl  marubatsu_chs_0E.tbl  marubatsu_chs_0F.tbl  marubatsu_chs_10.tbl  marubatsu_chs_11.tbl  marubatsu_chs_12.tbl  marubatsu_chs_13.tbl  marubatsu_chs_14.tbl  marubatsu_chs_15.tbl  marubatsu_chs_16.tbl  marubatsu_chs_17.tbl  marubatsu_chs_18.tbl  marubatsu_chs_19.tbl  marubatsu_chs_1A.tbl  marubatsu_chs_1B.tbl  marubatsu_chs_1C.tbl  marubatsu_chs_1D.tbl  marubatsu_chs_1E.tbl  marubatsu_chs_1F.tbl  marubatsu_chs_20.tbl  marubatsu_chs_21.tbl  marubatsu_chs_22.tbl  marubatsu_chs_23.tbl  marubatsu_chs_24.tbl  marubatsu_chs_25.tbl  marubatsu_chs_26.tbl  marubatsu_chs_27.tbl  (+18 more)
src/: marubatsuFont.asm  splash.s
strings/: README.md  script_0x0BFB54.asm  script_0x0CF5B1.asm  string_marubatsu.asm  strings_005183-00566F.asm  strings_050000-05B9C0.asm  strings_07F5F0-07FC82.asm  strings_0B2D20-0BC986.asm  strings_0C0000-0CB6E2.asm  strings_0D0000-0D019A.asm  strings_0D621E-0DFD8A.asm
tool/: extract_both.bat  extract_text.py  (+9 more)
(+34 files in other folders)
